--- a/index.html
+++ b/index.html
@@ -6,30 +6,31 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/palette.css" />
+    <link rel="stylesheet" href="css/root.css" />
+    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/class.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Adam STIEVENARD - Portfolio</title>
   </head>
   <body>
 
-    <nav>
-      <div id="navnom" class="caps"><a href="#page-top">Adam STIEVENARD</a></div>
-      <div id="navlist">
-        <ul class="caps">
-          <li><a href="#hard-skill">hard-skill</a></li>
-          <li><a href="#soft-skill">soft-skill</a></li>
-          <li><a href="#formations">formations</a></li>
-          <li><a href="#expériences">expériences</a></li>
-          <li><a href="#Projet">Projet</a></li>
-          <li><a href="#Loisirs">Loisirs</a></li>
-          <li><a href="#Contact">Contact</a></li>
+    <header class="caps">
+      <div><a href="#page-top">Adam STIEVENARD</a></div>
+
+      <div id="headerlist">
+        <ul>
+          <li><a href="contact.html">contact</a></li>
+          <li><a href="loisir.html">loisirs</a></li>
+          <li><a href="travail.html">mon travail</a></li>
+          <li><a href="competence.html">compétences</a></li>
         </ul>
       </div>
-    </nav>
+    </header>
 
-    <header>
+    <main>
       <div class="milieu">
         <h1  class="caps">bienvenue sur mon portfolio</h1>
-        <hr />
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel a,
           facere cupiditate omnis, itaque illum laboriosam dicta aut alias sunt
@@ -50,53 +51,6 @@
           ipsum commodi facilis nisi dicta. Beatae illum impedit ab similique.
         </p>
       </div>
-    </header>
-
-    <main>
-      <section id="hard-skill" class="milieu">
-        <div>
-          <h2 class="caps">hard-skill</h2>
-        </div>
-        <div></div>
-        <div></div>
-        <div><a href="#soft-skill">tempfleche</a></div>
-      </section>
-      <section id="soft-skill" class="milieu">
-        <div>
-          <h2 class="caps">soft-skill</h2>
-        </div>
-        <div><a href="#formations">tempfleche</a></div>
-      </section>
-      <section id="formations" class="milieu">
-        <div>
-          <h2 class="caps">formations</h2>
-        </div>
-        <div><a href="#experiences">tempfleche</a></div>
-      </section>
-      <section id="experiences" class="milieu">
-        <div>
-          <h2 class="caps">expériences</h2>
-        </div>
-        <div><a href="#projet">tempfleche</a></div>
-      </section>
-      <section id="projet" class="milieu">
-        <div>
-          <h2 class="caps">projet</h2>
-        </div>
-        <div><a href="#loisirs">tempfleche</a></div>
-      </section>
-      <section id="loisirs" class="milieu">
-        <div>
-          <h2 class="caps">loisirs</h2>
-        </div>
-        <div><a href="#contact">tempfleche</a></div>
-      </section>
-      <section id="contact" class="milieu">
-        <div>
-          <h2 class="caps">contact</h2>
-        </div>
-        <div><a href="#page-top">tempfleche</a></div>
-      </section>
     </main>
 
     <footer class="milieu">
