--- a/contact.html
+++ b/contact.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     
     <link rel="stylesheet" href="css/palette.css" />
     <link rel="stylesheet" href="css/root.css" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/class.css" />
     <link rel="stylesheet" href="css/contact.css" />
+    
     <title>Contact</title>
 </head>
 <body>
@@ -24,5 +25,14 @@
         </ul>
       </div>
     </header>
+
+    <main>
+      <section id="contact">
+        <h2>Contact</h2>
+        <div>
+
+        </div>
+      </section>
+    </main>
 </body>
 </html>
