--- a/index.html
+++ b/index.html
@@ -2,19 +2,16 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="stylesheet" href="css/palette.css" />
     <link rel="stylesheet" href="css/root.css" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/class.css" />
     <link rel="stylesheet" href="css/index.css" />
+
     <title>Adam STIEVENARD - Portfolio</title>
   </head>
   <body>
-
     <header class="caps">
       <div><a href="#page-top">Adam STIEVENARD</a></div>
 
