--- a/loisir.html
+++ b/loisir.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     
     <link rel="stylesheet" href="css/palette.css" />
     <link rel="stylesheet" href="css/root.css" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/class.css" />
     <link rel="stylesheet" href="css/loisir.css" />
+    
     <title>loisir</title>
 </head>
 <body>
@@ -25,5 +26,13 @@
       </div>
     </header>
 
+    <main>
+      <section id="loisir">
+        <h2>Loisirs</h2>
+        <div>
+
+        </div>
+      </section>
+    </main>
 </body>
 </html>
