--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/palette.css" />
     <link rel="stylesheet" href="css/root.css" />
     <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/class.css" />
+    <link rel="stylesheet" href="css/utils.css" />
     <link rel="stylesheet" href="css/index.css" />
 
     <title>Adam STIEVENARD - Portfolio</title>
@@ -17,10 +17,10 @@
 
       <div id="headerlist">
         <ul>
-          <li><a href="contact.html">contact</a></li>
-          <li><a href="loisir.html">loisirs</a></li>
-          <li><a href="travail.html">mon travail</a></li>
-          <li><a href="competence.html">compétences</a></li>
+          <li ><a href="contact.html" class="violet">contact</a></li>
+          <li ><a href="loisir.html" class="bleu">loisirs</a></li>
+          <li ><a href="travail.html" class="vert">mon travail</a></li>
+          <li ><a href="competence.html" class="jaune">compétences</a></li>
         </ul>
       </div>
     </header>
