--- a/loisir.html
+++ b/loisir.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/palette.css" />
     <link rel="stylesheet" href="css/root.css" />
     <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/class.css" />
+    <link rel="stylesheet" href="css/utils.css" />
     <link rel="stylesheet" href="css/loisir.css" />
     
     <title>loisir</title>
@@ -18,10 +18,10 @@
 
       <div id="headerlist">
         <ul class="caps">
-          <li><a href="contact.html">contact</a></li>
-          <li><a href="#page-top">loisirs</a></li>
-          <li><a href="travail.html">mon travail</a></li>
-          <li><a href="competence.html">compétences</a></li>
+          <li class="violet"><a href="contact.html">contact</a></li>
+          <li class="bleu"><a href="#page-top">loisirs</a></li>
+          <li class="vert"><a href="travail.html">mon travail</a></li>
+          <li class="jaune"><a href="competence.html">compétences</a></li>
         </ul>
       </div>
     </header>
