--- a/test.html
+++ b/test.html
@@ -27,7 +27,7 @@
     </div>
     <div class="button_b_color b_violet" id="2">
         <button class="button_transp" style="color: var(--text);">
-            <a href="#">test</a>
+            <a href="#2">test</a>
         </button>
     </div>
     
