--- a/test.html
+++ b/test.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,14 @@
     <link rel="stylesheet" href="css/button.css" />
     <link rel="stylesheet" href="css/border.css" />
     <title>Test</title>
+
+    <style>
+        div{
+            margin: 4px;
+        }
+    </style>
 </head>
+
 <body>
 
     <div class="div_b_color b_violet">
@@ -30,7 +38,47 @@
             <a href="#2">test</a>
         </button>
     </div>
-    
-    
+
+    <br>
+
+    <div>
+
+        <div class="button_b_color  hover_glow">
+            <div class="div_transp">
+                test
+            </div>
+        </div>
+        <div class="button_b_color b_vert hover_glow">
+            <div class="div_transp">
+                test
+            </div>
+        </div>
+        <div class="button_b_color b_rouge hover_glow">
+            <div class="div_transp">
+                test
+            </div>
+        </div>
+        <div class="button_b_color b_violet hover_glow">
+            <div class="div_transp">
+                test
+            </div>
+        </div>
+        <div class="button_b_color b_bleu hover_glow">
+            <div class="div_transp">
+                test
+            </div>
+        </div>
+        <div class="button_b_color b_beige hover_glow">
+            <div class="div_transp">
+                test
+            </div>
+        </div>
+
+    </div>
+
+
+
+
 </body>
+
 </html>
