--- a/test.html
+++ b/test.html
@@ -10,12 +10,6 @@
     <link rel="stylesheet" href="css/button.css" />
     <link rel="stylesheet" href="css/border.css" />
     <title>Test</title>
-
-    <style>
-        div{
-            margin: 4px;
-        }
-    </style>
 </head>
 
 <body>
@@ -28,20 +22,26 @@
 
     <br>
 
-    <div class="button_b_color b_violet" id="1">
-        <button class="button_transp" style="color: var(--text);">
-            <a href="#">test</a>
-        </button>
-    </div>
-    <div class="button_b_color b_violet" id="2">
-        <button class="button_transp" style="color: var(--text);">
-            <a href="#2">test</a>
-        </button>
+    <div class="col_flex">
+        <div class="button_b_color b_violet" id="1">
+            <button class="button_transp" style="color: var(--text);">
+                <a href="#">test</a>
+            </button>
+        </div>
+        <div class="button_b_color b_violet" id="2">
+            <button class="button_transp" style="color: var(--text);">
+                <a href="#2">test</a>
+            </button>
+        </div>
     </div>
 
     <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
-    <div>
+    <div class="line_flex">
 
         <div class="button_b_color  hover_glow">
             <div class="div_transp">
@@ -71,6 +71,8 @@
         <div class="button_b_color b_beige hover_glow">
             <div class="div_transp">
                 test
+                <hr>
+                Test
             </div>
         </div>
 
