--- a/travail.html
+++ b/travail.html
@@ -18,10 +18,10 @@
 
       <div id="headerlist">
         <ul class="caps">
-          <li class="violet"><a href="contact.html">contact</a></li>
-          <li class="bleu"><a href="loisir.html">loisirs</a></li>
-          <li class="vert"><a href="#page-top">mon travail</a></li>
-          <li class="jaune"><a href="competence.html">compétences</a></li>
+          <li ><a class="violet" href="contact.html">contact</a></li>
+          <li ><a class="bleu" href="loisir.html">loisirs</a></li>
+          <li ><a class="vert" href="#page-top">mon travail</a></li>
+          <li ><a class="jaune" href="competence.html">compétences</a></li>
         </ul>
       </div>
     </header>
