--- a/test.html
+++ b/test.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <div class="div_b_color b_violet">
+    <div class="div_b_color b_violet fit_content">
         <div class="div_transp">
             test
         </div>
@@ -22,7 +22,7 @@
 
     <br>
 
-    <div class="col_flex">
+    <div class="col_flex fit_content">
         <div class="button_b_color b_violet" id="1">
             <button class="button_transp" style="color: var(--text);">
                 <a href="#">test</a>
@@ -35,14 +35,7 @@
         </div>
     </div>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
     <div class="line_flex">
-
         <div class="button_b_color  hover_glow">
             <div class="div_transp">
                 test
