--- a/test.html
+++ b/test.html
@@ -35,33 +35,52 @@
         </div>
     </div>
 
+    <br>
+
     <div class="line_flex">
         <div class="button_b_color  hover_glow">
             <div class="div_transp">
                 test
+                <hr>
+                Test
             </div>
         </div>
         <div class="button_b_color b_vert hover_glow">
             <div class="div_transp">
                 test
+                <hr>
+                Test
             </div>
         </div>
         <div class="button_b_color b_rouge hover_glow">
             <div class="div_transp">
                 test
+                <hr>
+                Test
             </div>
         </div>
         <div class="button_b_color b_violet hover_glow">
             <div class="div_transp">
                 test
+                <hr>
+                Test
             </div>
         </div>
         <div class="button_b_color b_bleu hover_glow">
             <div class="div_transp">
                 test
+                <hr>
+                Test
             </div>
         </div>
         <div class="button_b_color b_beige hover_glow">
+            <div class="div_transp">
+                test
+                <hr>
+                Test
+            </div>
+        </div>
+        <div class="button_b_color b_jaune hover_glow">
             <div class="div_transp">
                 test
                 <hr>
