--- a/competence.html
+++ b/competence.html
@@ -15,11 +15,11 @@
     <title>Competences</title>
 </head>
 <body>
-    <header class="div_b_color b_violet">
-      <div id="headernom" class="caps"><a href="index.html">Adam STIEVENARD</a></div>
+    <header class="div_b_color b_violet caps">
+      <div id="headernom"><a href="index.html">Adam STIEVENARD</a></div>
 
       <div id="headerlist">
-        <ul class="caps">
+        <ul>
           <li><a class="violet" href="contact.html">contact</a></li>
           <li><a class="bleu" href="loisir.html">loisirs</a></li>
           <li><a class="vert" href="travail.html">mon travail</a></li>
