--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/utils.css" />
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/div.css" />
+    <link rel="stylesheet" href="css/border.css" />
 
     <title>Adam STIEVENARD - Portfolio</title>
   </head>
   <body>
-    <header class="caps">
-      <div><a href="#page-top">Adam STIEVENARD</a></div>
+    <header class="div_b_color b_violet caps">
+      <div id="headernom"><a href="#page-top">Adam STIEVENARD</a></div>
 
       <div id="headerlist">
         <ul>
