--- a/contact.html
+++ b/contact.html
@@ -9,15 +9,17 @@
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/utils.css" />
     <link rel="stylesheet" href="css/contact.css" />
+    <link rel="stylesheet" href="css/div.css" />
+    <link rel="stylesheet" href="css/border.css" />
     
     <title>Contact</title>
 </head>
 <body>
-    <header>
-      <div id="headernom" class="caps"><a href="index.html">Adam STIEVENARD</a></div>
+    <header class="div_b_color b_violet caps">
+      <div id="headernom"><a href="index.html">Adam STIEVENARD</a></div>
 
       <div id="headerlist">
-        <ul class="caps">
+        <ul>
           <li ><a class="violet" href="#page-top">contact</a></li>
           <li ><a class="bleu" href="loisir.html">loisirs</a></li>
           <li ><a class="vert" href="travail.html">mon travail</a></li>
