header selected fix

--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
   </head>
   <body>
     <header class="div_b_color b_violet caps">
-      <div id="headernom"><a href="#page-top">Adam STIEVENARD</a></div>
+      <div id="headernom" class="selected"><a href="#page-top">Adam STIEVENARD</a></div>
 
       <div id="headerlist">
         <ul>
-          <li ><a href="contact.html" class="violet">contact</a></li>
-          <li ><a href="loisir.html" class="bleu">loisirs</a></li>
+          <li ><a href="contact.html" class="beige">CV</a></li>
+          <li >|</a></li>
+          <li ><a href="contact.html" class="rouge">contact</a></li>
+          <li ><a href="loisir.html" class="jaune">loisirs</a></li>
           <li ><a href="travail.html" class="vert">mon travail</a></li>
-          <li ><a href="competence.html" class="jaune">compétences</a></li>
+          <li ><a href="competence.html" class="bleu">compétences</a></li>
         </ul>
       </div>
     </header>
