--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,12 @@
 
       <div id="headerlist">
         <ul>
-          <li ><a class="violet" href="#page-top">contact</a></li>
-          <li ><a class="bleu" href="loisir.html">loisirs</a></li>
+          <li ><a href="contact.html" class="beige">CV</a></li>
+          <li >|</a></li>
+          <li ><a class="rouge selected" href="#page-top">contact</a></li>
+          <li ><a class="jaune" href="loisir.html">loisirs</a></li>
           <li ><a class="vert" href="travail.html">mon travail</a></li>
-          <li ><a class="jaune" href="competence.html">compétences</a></li>
+          <li ><a class="bleu" href="competence.html">compétences</a></li>
         </ul>
       </div>
     </header>
