--- a/loisir.html
+++ b/loisir.html
@@ -20,10 +20,12 @@
 
       <div id="headerlist">
         <ul>
-          <li ><a class="violet" href="contact.html">contact</a></li>
-          <li ><a class="bleu" href="#page-top">loisirs</a></li>
+          <li ><a href="contact.html" class="beige">CV</a></li>
+          <li >|</a></li>
+          <li ><a class="rouge" href="contact.html">contact</a></li>
+          <li ><a class="jaune selected" href="#page-top">loisirs</a></li>
           <li ><a class="vert" href="travail.html">mon travail</a></li>
-          <li ><a class="jaune" href="competence.html">compétences</a></li>
+          <li ><a class="bleu" href="competence.html">compétences</a></li>
         </ul>
       </div>
     </header>
