--- a/competence.html
+++ b/competence.html
@@ -20,8 +20,8 @@
 
       <div id="headerlist">
         <ul>
-          <li ><a href="contact.html" class="beige">CV</a></li>
-          <li >|</a></li>
+          <li ><a href="readme.md" download="" class="beige">CV</a></li>
+          <li id="sep">|</li>
           <li><a class="rouge" href="contact.html">contact</a></li>
           <li><a class="jaune" href="loisir.html">loisirs</a></li>
           <li><a class="vert" href="travail.html">mon travail</a></li>
@@ -31,7 +31,7 @@
     </header>
 
     <main>
-      <section id="formation">
+      <section id="formation" class="fade-in">
         <div class="div_b_color b_bleu">
           <div class="div_transp">
             Formation
@@ -42,7 +42,7 @@
         </div>
       </section>
 
-      <section id="hardskill">
+      <section id="hardskill" class="fade-in">
         <div class="div_b_color b_bleu">
           <div class="div_transp">
             Hard-Skill
@@ -54,7 +54,7 @@
         </div>
       </section>
 
-      <section id="softskill">
+      <section id="softskill" class="fade-in">
         <div class="div_b_color b_bleu">
           <div class="div_transp">
             Soft-Skill
