--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
       <div id="headerlist">
         <ul>
-          <li ><a href="contact.html" class="beige">CV</a></li>
-          <li >|</a></li>
+          <li ><a href="readme.md" download="" class="beige">CV</a></li>
+          <li id="sep">|</li>
           <li ><a href="contact.html" class="rouge">contact</a></li>
           <li ><a href="loisir.html" class="jaune">loisirs</a></li>
           <li ><a href="travail.html" class="vert">mon travail</a></li>
