--- a/travail.html
+++ b/travail.html
@@ -20,8 +20,8 @@
 
       <div id="headerlist">
         <ul>
-          <li ><a href="contact.html" class="beige">CV</a></li>
-          <li >|</a></li>
+          <li ><a href="readme.md" download="" class="beige">CV</a></li>
+          <li id="sep">|</li>
           <li ><a class="rouge" href="contact.html">contact</a></li>
           <li ><a class="jaune" href="loisir.html">loisirs</a></li>
           <li ><a class="vert selected" href="#page-top">mon travail</a></li>
