--- a/travail.html
+++ b/travail.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/travail.css" />
   <link rel="stylesheet" href="css/div.css" />
   <link rel="stylesheet" href="css/border.css" />
+  <link rel="stylesheet" href="css/transi.css" />
 
   <title>Mon Travail</title>
 </head>
@@ -34,87 +35,72 @@
 
   <main class="line_flex_around">
 
-    <section id="scolaire">
+    <section id="scolaire" class="container">
 
-      <section id="scolaire_1">
+      <h2 class="fade-down">Travail Scolaire</h2>
 
-        <h2 class="center">Travail Scolaire</h2>
-
-        <div class="div_b_color b_bleu">
+      <div class="box">
+        <section id="scolaire_1" class=" item div_b_color b_bleu hover_glow ">
           <div class="div_transp">
             Scolaire 1
             <hr>
             temp
           </div>
+        </section>
 
-        </div>
-      </section>
-
-      <section id="scolaire_2" class="b_bleu">
-        <div class="div_b_color b_bleu fade-in">
+        <section id="scolaire_2" class="item div_b_color b_bleu hover_glow">
           <div class="div_transp">
             Scolaire 2
             <hr>
             temp
-
           </div>
+        </section>
 
-        </div>
-      </section>
-
-      <section id="scolaire_3" class="fade-in">
-        <div class="div_b_color b_bleu">
+        <section id="scolaire_3" class="item div_b_color b_bleu hover_glow">
           <div class="div_transp">
             Scolaire 3
             <hr>
             temp
           </div>
+        </section>
+      </div>
 
-        </div>
-      </section>
 
     </section>
 
 
     <div class="vl b_violet"></div>
 
-    <section id="Perso">
+    <section id="Perso" class="container">
+      <h2 class="fade-down">Travail Personnel</h2>
 
-      <section id="perso_1">
-        <h2>Travail Personnel</h2>
-        <div class="div_b_color b_bleu">
+      <div class="box">
+        <section id="perso_1" class="item div_b_color b_bleu hover_glow">
           <div class="div_transp">
             Perso 1
             <hr>
             temp
           </div>
+        </section>
 
-        </div>
-      </section>
-
-
-      <section id="perso_2" class="fade-in">
-        <div class="div_b_color b_bleu">
+        <section id="perso_2" class="item div_b_color b_bleu hover_glow">
           <div class="div_transp">
             Perso 2
             <hr>
             temp
-
           </div>
+        </section>
 
-        </div>
-      </section>
-
-      <section id="perso_3" class="fade-in">
-        <div class="div_b_color b_bleu">
+        <section id="perso_3" class="item div_b_color b_bleu hover_glow">
           <div class="div_transp">
             Perso 3
             <hr>
             temp
           </div>
+        </section>
 
-        </div>
-      </section>
+      </div>
+
 
     </section>
 
