--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <div id="headerlist">
         <ul>
-          <li ><a href="readme.md" download="" class="beige">CV</a></li>
+          <li ><a href="assets/CV.pdf" download="" class="beige">CV</a></li>
           <li id="sep">|</li>
           <li ><a href="contact.html" class="rouge">contact</a></li>
           <li ><a href="loisir.html" class="jaune">loisirs</a></li>
