--- a/travail.html
+++ b/travail.html
@@ -23,7 +23,7 @@
 
     <div id="headerlist">
       <ul>
-        <li><a href="readme.md" download="" class="beige">CV</a></li>
+        <li><a href="assets/CV.pdf" download="" class="beige">CV</a></li>
         <li id="sep">|</li>
         <li><a class="rouge" href="contact.html">contact</a></li>
         <li><a class="jaune" href="loisir.html">loisirs</a></li>
