--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
       <div id="headerlist">
         <ul>
-          <li ><a href="readme.md" download="" class="beige">CV</a></li>
+          <li ><a href="assets/CV.pdf" download="" class="beige">CV</a></li>
           <li id="sep">|</li>
           <li ><a class="rouge selected" href="#page-top">contact</a></li>
           <li ><a class="jaune" href="loisir.html">loisirs</a></li>
