--- a/travail.html
+++ b/travail.html
@@ -40,7 +40,7 @@
       <h2 class="fade-down">Travail Scolaire</h2>
 
       <div class="box">
-        <section id="scolaire_1" class=" item div_b_color b_bleu hover_glow ">
+        <section id="scolaire_1" class=" item div_b_color b_vert hover_glow ">
           <div class="div_transp">
             Scolaire 1
             <hr>
@@ -48,7 +48,7 @@
           </div>
         </section>
 
-        <section id="scolaire_2" class="item div_b_color b_bleu hover_glow">
+        <section id="scolaire_2" class="item div_b_color b_vert hover_glow">
           <div class="div_transp">
             Scolaire 2
             <hr>
@@ -64,7 +64,7 @@
       <h2 class="fade-down">Travail Personnel</h2>
 
       <div class="box">
-        <section id="perso_1" class="item div_b_color b_bleu hover_glow">
+        <section id="perso_1" class="item div_b_color b_vert hover_glow">
           <div class="div_transp">
             Perso 1
             <hr>
@@ -72,7 +72,7 @@
           </div>
         </section>
 
-        <section id="perso_2" class="item div_b_color b_bleu hover_glow">
+        <section id="perso_2" class="item div_b_color b_vert hover_glow">
           <div class="div_transp">
             Perso 2
             <hr>
