--- a/contact.html
+++ b/contact.html
@@ -31,11 +31,10 @@
     </header>
 
     <main>
+      <br>
       <section id="contact">
-        <h2>Contact</h2>
-        <div>
-
-        </div>
+        <p>adam.stievenard.etu@univ-lille.fr</p>
+        <p class="caps">06 10 72 86 03</p>
       </section>
     </main>
 </body>
