--- a/travail.html
+++ b/travail.html
@@ -42,6 +42,7 @@
       <div class="box">
         <section id="scolaire_1" class=" item div_b_color b_vert hover_glow ">
           <div class="div_transp">
+            <img href="assets/casino/menu.png" alt="menu"></img>
             Scolaire 1
             <hr>
             temp
