--- a/formation.html
+++ b/formation.html
@@ -23,7 +23,7 @@
           <li ><a href="assets/CV.pdf" download="" class="beige">CV</a></li>
           <li id="sep">|</li>
           <li ><a class="rouge" href="contact.html">contact</a></li>
-          <li ><a class="jaune selected" href="#page-top">loisirs</a></li>
+          <li ><a class="jaune selected" href="#page-top">formation</a></li>
           <li ><a class="vert" href="travail.html">mon travail</a></li>
           <li ><a class="bleu" href="competence.html">compétences</a></li>
         </ul>
