--- a/travail.html
+++ b/travail.html
@@ -26,7 +26,7 @@
         <li><a href="assets/CV.pdf" download="" class="beige">CV</a></li>
         <li id="sep">|</li>
         <li><a class="rouge" href="contact.html">contact</a></li>
-        <li><a class="jaune" href="loisir.html">loisirs</a></li>
+        <li><a class="jaune" href="loisir.html">formation</a></li>
         <li><a class="vert selected" href="#page-top">mon travail</a></li>
         <li><a class="bleu" href="competence.html">compétences</a></li>
       </ul>
@@ -35,27 +35,18 @@
 
   <main class="line_flex_around">
 
-    <section id="scolaire" class="container">
+    <section id="scolaire" >
+      <h2>Travail Scolaire</h2>
 
-      <h2 class="fade-down">Travail Scolaire</h2>
-
-      <div class="box">
-        <section id="scolaire_1" class=" item div_b_color b_vert hover_glow ">
-          <div class="div_transp">
-            <img href="assets/casino/menu.png" alt="menu"></img>
-            Scolaire 1
-            <hr>
-            temp
-          </div>
-        </section>
-
-        <section id="scolaire_2" class="item div_b_color b_vert hover_glow">
-          <div class="div_transp">
-            Scolaire 2
-            <hr>
-            temp
-          </div>
-        </section>
+      <div class="container">
+        <div class="">
+          <img src="assets/casino/machine.png" class="image" alt="">
+          <p>temp</p>
+        </div>
+        <div>
+          <img src="assets/casino/menu.png" class="image" alt="">
+          <p>temp</p>
+        </div>
       </div>
     </section>
 
