--- a/competence.html
+++ b/competence.html
@@ -23,7 +23,7 @@
           <li ><a href="assets/CV.pdf" download="" class="beige">CV</a></li>
           <li id="sep">|</li>
           <li><a class="rouge" href="contact.html">contact</a></li>
-          <li><a class="jaune" href="loisir.html">loisirs</a></li>
+          <li><a class="jaune" href="loisir.html">formation</a></li>
           <li><a class="vert" href="travail.html">mon travail</a></li>
           <li><a class="bleu selected" href="#page-top">compétences</a></li>
         </ul>
