--- a/test.html
+++ b/test.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/div.css" />
     <link rel="stylesheet" href="css/button.css" />
     <link rel="stylesheet" href="css/border.css" />
+    <link rel="stylesheet" href="css/test.css" />
     <title>Test</title>
 </head>
 
@@ -88,6 +89,12 @@
             </div>
         </div>
 
+    </div>
+
+    <div class="button_b_color b_jaune hover_glow">
+        <div class="div_transp">
+            <img src="assets/casino/menu.png" alt="" >
+        </div>
     </div>
 
 </body>
