--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li ><a href="assets/CV.pdf" download="" class="beige">CV</a></li>
           <li id="sep">|</li>
           <li ><a href="contact.html" class="rouge">contact</a></li>
-          <li ><a href="loisir.html" class="jaune">formation</a></li>
+          <li ><a href="formation.html" class="jaune">formation</a></li>
           <li ><a href="travail.html" class="vert">mon travail</a></li>
           <li ><a href="competence.html" class="bleu">compétences</a></li>
         </ul>
