--- a/travail.html
+++ b/travail.html
@@ -26,7 +26,7 @@
         <li><a href="assets/CV.pdf" download="" class="beige">CV</a></li>
         <li id="sep">|</li>
         <li><a class="rouge" href="contact.html">contact</a></li>
-        <li><a class="jaune" href="loisir.html">formation</a></li>
+        <li><a class="jaune" href="formation.html">formation</a></li>
         <li><a class="vert selected" href="#page-top">mon travail</a></li>
         <li><a class="bleu" href="competence.html">compétences</a></li>
       </ul>
@@ -39,11 +39,11 @@
       <h2>Travail Scolaire</h2>
 
       <div class="container">
-        <div class="">
+        <div class="div_transp div_b_color b_violet">
           <img src="assets/casino/machine.png" class="image" alt="">
           <p>temp</p>
         </div>
-        <div>
+        <div class="div_transp div_b_color b_violet">
           <img src="assets/casino/menu.png" class="image" alt="">
           <p>temp</p>
         </div>
@@ -52,25 +52,17 @@
 
     <div class="vl b_violet"></div>
 
-    <section id="Perso" class="container">
+    <section id="Perso">
       <h2 class="fade-down">Travail Personnel</h2>
-
-      <div class="box">
-        <section id="perso_1" class="item div_b_color b_vert hover_glow">
-          <div class="div_transp">
-            Perso 1
-            <hr>
-            temp
-          </div>
-        </section>
-
-        <section id="perso_2" class="item div_b_color b_vert hover_glow">
-          <div class="div_transp">
-            Perso 2
-            <hr>
-            temp
-          </div>
-        </section>
+      <div class="container">
+        <div class="div_transp div_b_color b_vert">
+          <img src="assets/laby/laby.png" class="image" alt="">
+          <p>temp</p>
+        </div>
+        <div class="div_transp div_b_color b_vert">
+          <img src="assets/laby/login.png" class="image" alt="">
+          <p>temp</p>
+        </div>
       </div>
 
     </section>
