--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
           <li ><a href="assets/CV.pdf" download="" class="beige">CV</a></li>
           <li id="sep">|</li>
           <li ><a class="rouge selected" href="#page-top">contact</a></li>
-          <li ><a class="jaune" href="loisir.html">formation</a></li>
+          <li ><a class="jaune" href="formation.html">formation</a></li>
           <li ><a class="vert" href="travail.html">mon travail</a></li>
           <li ><a class="bleu" href="competence.html">compétences</a></li>
         </ul>
