--- a/formation.html
+++ b/formation.html
@@ -1,42 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    
-    <link rel="stylesheet" href="css/palette.css" />
-    <link rel="stylesheet" href="css/root.css" />
-    <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/utils.css" />
-    <link rel="stylesheet" href="css/loisir.css" />
-    <link rel="stylesheet" href="css/div.css" />
-    <link rel="stylesheet" href="css/border.css" />
-    
-    <title>loisir</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+
+  <link rel="stylesheet" href="css/palette.css" />
+  <link rel="stylesheet" href="css/root.css" />
+  <link rel="stylesheet" href="css/header.css" />
+  <link rel="stylesheet" href="css/utils.css" />
+  <link rel="stylesheet" href="css/loisir.css" />
+  <link rel="stylesheet" href="css/div.css" />
+  <link rel="stylesheet" href="css/border.css" />
+  <link rel="stylesheet" href="css/formation.css" />
+
+  <title>loisir</title>
 </head>
+
 <body>
-    <header class="div_b_color b_violet caps">
-      <div id="headernom"><a href="index.html">Adam STIEVENARD</a></div>
+  <header class="div_b_color b_violet caps">
+    <div id="headernom"><a href="index.html">Adam STIEVENARD</a></div>
 
-      <div id="headerlist">
-        <ul>
-          <li ><a href="assets/CV.pdf" download="" class="beige">CV</a></li>
-          <li id="sep">|</li>
-          <li ><a class="rouge" href="contact.html">contact</a></li>
-          <li ><a class="jaune selected" href="#page-top">formation</a></li>
-          <li ><a class="vert" href="travail.html">mon travail</a></li>
-          <li ><a class="bleu" href="competence.html">compétences</a></li>
-        </ul>
-      </div>
-    </header>
+    <div id="headerlist">
+      <ul>
+        <li><a href="assets/CV.pdf" download="" class="beige">CV</a></li>
+        <li id="sep">|</li>
+        <li><a class="rouge" href="contact.html">contact</a></li>
+        <li><a class="jaune selected" href="#page-top">formation</a></li>
+        <li><a class="vert" href="travail.html">mon travail</a></li>
+        <li><a class="bleu" href="competence.html">compétences</a></li>
+      </ul>
+    </div>
+  </header>
 
-    <main>
-      <section id="loisir">
-        <h2>Loisirs</h2>
-        <div>
+  <main class="milieu">
+    <section id="loisir">
+      <div id="forma_div" class="div_b_color b_jaune">
+        <div id="forma_div_child" class="div_transp">
+          <div class="timeline">
+            <div class="line_flex_center">
+              <div class="ball"></div>
+              <div class="line"></div>
+              <p class="formation caps">BUT Informatique - Université de Lille 59650</p>
+            </div>
 
+            <div class="connector_row">
+              <div class="line_flex_center">
+                <div class="connector"></div>
+              </div>
+            </div>
+
+            <div class="line_flex_center">
+              <div class="ball"></div>
+              <div class="line"></div>
+              <p class="formation caps">Baccaleuréat Géneral - Lycée Beaupré 59320</p>
+            </div>
+          </div>
         </div>
-      </section>
-    </main>
+      </div>
+    </section>
+  </main>
 </body>
+
 </html>
