--- a/travail.html
+++ b/travail.html
@@ -39,27 +39,29 @@
       <h2>Travail Scolaire</h2>
 
       <div class="container">
-        <div class="div_transp div_b_color b_violet">
-          <img src="assets/casino/machine.png" class="image" alt="">
-          <p>temp</p>
+        <div class="div_transp div_b_color b_vert hover_glow">
+          <img src="assets/casino/menu.png" id="machine" class="image " alt="">
+          <div>
+            <p>temp</p>
+          </div>
         </div>
-        <div class="div_transp div_b_color b_violet">
-          <img src="assets/casino/menu.png" class="image" alt="">
+        <div class="div_transp div_b_color b_vert hover_glow">
+          <img src="assets/laby/menuJFX.png" id="laby" class="image" alt="">
           <p>temp</p>
         </div>
       </div>
     </section>
 
-    <div class="vl b_violet"></div>
+    <div class="vl b_vert"></div>
 
     <section id="Perso">
       <h2 class="fade-down">Travail Personnel</h2>
       <div class="container">
-        <div class="div_transp div_b_color b_vert">
+        <div class="div_transp div_b_color b_vert hover_glow">
           <img src="assets/laby/laby.png" class="image" alt="">
           <p>temp</p>
         </div>
-        <div class="div_transp div_b_color b_vert">
+        <div class="div_transp div_b_color b_vert hover_glow">
           <img src="assets/laby/login.png" class="image" alt="">
           <p>temp</p>
         </div>
