fix color and hover

--- a/contact.html
+++ b/contact.html
@@ -1,41 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    
-    <link rel="stylesheet" href="css/palette.css" />
-    <link rel="stylesheet" href="css/root.css" />
-    <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/utils.css" />
-    <link rel="stylesheet" href="css/contact.css" />
-    <link rel="stylesheet" href="css/div.css" />
-    <link rel="stylesheet" href="css/border.css" />
-    
-    <title>Contact</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+
+  <link rel="stylesheet" href="css/palette.css" />
+  <link rel="stylesheet" href="css/root.css" />
+  <link rel="stylesheet" href="css/header.css" />
+  <link rel="stylesheet" href="css/utils.css" />
+  <link rel="stylesheet" href="css/contact.css" />
+  <link rel="stylesheet" href="css/div.css" />
+  <link rel="stylesheet" href="css/border.css" />
+
+  <title>Contact</title>
 </head>
+
 <body>
-    <header class="div_b_color b_violet caps">
-      <div id="headernom"><a href="index.html">Adam STIEVENARD</a></div>
+  <header class="div_b_color b_violet caps">
+    <div id="headernom"><a href="index.html">Adam STIEVENARD</a></div>
 
-      <div id="headerlist">
-        <ul>
-          <li ><a href="assets/CV.pdf" download="" class="beige">CV</a></li>
-          <li id="sep">|</li>
-          <li ><a class="rouge selected" href="#page-top">contact</a></li>
-          <li ><a class="jaune" href="formation.html">formation</a></li>
-          <li ><a class="vert" href="travail.html">mon travail</a></li>
-          <li ><a class="bleu" href="competence.html">compétences</a></li>
-        </ul>
+    <div id="headerlist">
+      <ul>
+        <li><a href="assets/CV.pdf" download="" class="beige">CV</a></li>
+        <li id="sep">|</li>
+        <li><a class="rouge selected" href="#page-top">contact</a></li>
+        <li><a class="jaune" href="formation.html">formation</a></li>
+        <li><a class="vert" href="travail.html">mon travail</a></li>
+        <li><a class="bleu" href="competence.html">compétences</a></li>
+      </ul>
+    </div>
+  </header>
+
+  <main class="milieu">
+    <section id="contact">
+
+      <div id="forma_div" class="div_b_color b_rouge">
+        <div id="forma_div_child" class="div_transp timeline">
+
+          <div id="contact_div_child" class="div_transp">
+            <h2>Contactez-moi</h2>
+            <a href="" class="rouge">LinkedIn</a>
+            <p>adam.stievenard.etu@univ-lille.fr</p>
+            <p class="caps">06 10 72 86 03</p>
+          </div>
+
+        </div>
       </div>
-    </header>
 
-    <main>
-      <br>
-      <section id="contact">
-        <p>adam.stievenard.etu@univ-lille.fr</p>
-        <p class="caps">06 10 72 86 03</p>
-      </section>
-    </main>
+    </section>
+  </main>
 </body>
+
 </html>
