--- a/formation.html
+++ b/formation.html
@@ -34,10 +34,12 @@
   </header>
 
   <main class="milieu">
-    <section id="loisir">
+
+    <section id="formation">
+
       <div id="forma_div" class="div_b_color b_jaune">
-        <div id="forma_div_child" class="div_transp">
-          <div class="timeline">
+        <div id="forma_div_child" class="div_transp timeline">
+    
             <div class="line_flex_center">
               <div class="ball"></div>
               <div class="line"></div>
@@ -55,9 +57,11 @@
               <div class="line"></div>
               <p class="formation caps">Baccaleuréat Géneral - Lycée Beaupré 59320</p>
             </div>
-          </div>
+
+      
         </div>
       </div>
+
     </section>
   </main>
 </body>
