--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
         <div id="forma_div_child" class="div_transp timeline">
 
           <div id="contact_div_child" class="div_transp">
-            <h2>Contactez-moi</h2>
+            <h2 class="underline">Contactez-moi</h2>
             <a href="" class="rouge">LinkedIn</a>
             <p>adam.stievenard.etu@univ-lille.fr</p>
             <p class="caps">06 10 72 86 03</p>
