--- a/travail.html
+++ b/travail.html
@@ -35,19 +35,25 @@
 
   <main class="line_flex_around">
 
-    <section id="scolaire" >
+    <section id="scolaire">
       <h2>Travail Scolaire</h2>
 
       <div class="container">
         <div class="div_transp div_b_color b_vert hover_glow">
           <img src="assets/casino/menu.png" id="machine" class="image " alt="">
-          <div>
-            <p>temp</p>
+          <div class="info_box">
+            <p>date :</p> 
+            <p>pg : </p>
+            <a href="" class="vert">github</a>
           </div>
         </div>
         <div class="div_transp div_b_color b_vert hover_glow">
           <img src="assets/laby/menuJFX.png" id="laby" class="image" alt="">
-          <p>temp</p>
+          <div class="info_box">
+            <p>date :</p> 
+            <p>pg : </p>
+            <a href="" class="vert">github</a>
+          </div>
         </div>
       </div>
     </section>
@@ -58,12 +64,21 @@
       <h2 class="fade-down">Travail Personnel</h2>
       <div class="container">
         <div class="div_transp div_b_color b_vert hover_glow">
-          <img src="assets/laby/laby.png" class="image" alt="">
-          <p>temp</p>
+          <img src="assets/placeholder.png" class="image" alt="">
+          <div class="info_box">
+            <p id="date3">date : </p> 
+            <p id="pg3">pg : </p>
+            
+            <a href="" class="rouge">github</a>
+          </div>
         </div>
         <div class="div_transp div_b_color b_vert hover_glow">
-          <img src="assets/laby/login.png" class="image" alt="">
-          <p>temp</p>
+          <img id="img4" src="assets/laby/login.png" class="image" alt="">
+          <div class="info_box">
+            <p>date :</p> 
+            <p>pg : </p>
+            <a href="" class="vert">github</a>
+          </div>
         </div>
       </div>
 
