--- a/travail.html
+++ b/travail.html
@@ -42,18 +42,30 @@
         <div class="div_transp div_b_color b_vert hover_glow">
           <img src="assets/casino/menu.png" id="machine" class="image " alt="">
           <div class="info_box">
-            <p>date :</p> 
+            <p>date :</p>
             <p>pg : </p>
-            <a href="" class="vert">github</a>
+            <a href="" class="vert">gitlab</a>
+            <br><br>
+            <div class="lang">
+              <p id="java">java</p>
+              <p id="bash">bash</p>
+            </div>
           </div>
         </div>
         <div class="div_transp div_b_color b_vert hover_glow">
           <img src="assets/laby/menuJFX.png" id="laby" class="image" alt="">
           <div class="info_box">
-            <p>date :</p> 
+            <p>date :</p>
             <p>pg : </p>
-            <a href="" class="vert">github</a>
+            <a href="" class="vert">gitlab</a>
+            <br><br>
+            <div class="lang">
+              <p id="java">java</p>
+              <p id="css">css</p>
+              <p id="bash">bash</p>
+            </div>
           </div>
+
         </div>
       </div>
     </section>
@@ -66,18 +78,26 @@
         <div class="div_transp div_b_color b_vert hover_glow">
           <img src="assets/placeholder.png" class="image" alt="">
           <div class="info_box">
-            <p id="date3">date : </p> 
+            <p id="date3">date : </p>
             <p id="pg3">pg : </p>
-            
             <a href="" class="rouge">github</a>
+            <br><br>
+            <div class="lang">
+              <p id="none">none</p>
+            </div>
           </div>
         </div>
         <div class="div_transp div_b_color b_vert hover_glow">
           <img id="img4" src="assets/laby/login.png" class="image" alt="">
           <div class="info_box">
-            <p>date :</p> 
+            <p>date :</p>
             <p>pg : </p>
             <a href="" class="vert">github</a>
+            <br><br>
+            <div class="lang">
+              <p id="java">java</p>
+              <p id="bash">bash</p>
+            </div>
           </div>
         </div>
       </div>
